style and add loading spinner

--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="popup.css">
-  </head>
-  <body>
-    <!-- Add your HTML elements here -->
-    <button id="summarize-button">Summarize</button>
-    <div id="output-container">
-      <button id="copyButton" class="copy-button">
-        <img src="copy-icon.png" alt="Copy icon">
-      </button>    
-      <div id="output"></div>
+
+<head>
+  <link rel="stylesheet" href="popup.css">
+</head>
+
+<body>
+  <!-- Add the summarize button -->
+  <button id="summarize-button">Summarize</button>
+
+  <div id="output-container">
+
+    <!-- Add the loading animation container -->
+    <div id="loading">
+      <div id="spinner" class="spinner"></div>
     </div>
-    <script src="popup.js"></script>
-  </body>
+
+    <button id="copyButton" class="copy-button">
+      <img src="copy-icon.png" alt="Copy icon">
+    </button>
+
+    <div id="output"></div>
+    
+  </div>
+  <script src="popup.js"></script>
+</body>
+
 </html>
